21.13.3
Ported from Epic Fight 20.13.3
Fixed the camera not switching when aiming ranged weapons